--- a/css/global/global.css
+++ b/css/global/global.css
@@ -7356,6 +7356,9 @@
 .g-bg-color--sky-light {
   background-color: #f5f8f9 !important;
 }
+.g-bg-color--sky-pure-white {
+  background-color: #ffffff !important;
+}
 
 .g-bg-color--primary-to-blueviolet-ltr {
   background-image: linear-gradient(145deg, rgba(19, 177, 205, 0.95) 0%, rgba(152, 119, 234, 0.95) 100%);
